--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -1,4 +1,11 @@
-// Columns with Gutters
+/**
+ * Style an element as a column with a gutter.
+ * @param {number} [ratios=1] - A width relative to its container as a fraction.
+ * @param {number} [offset=0] - A offset specified as a fraction (see ratios).
+ * @param {number} [cycle=0] - Easily create an nth column grid where cycle equals the number of columns.
+ * @param {number} [uncycle=0] - Undo a previous cycle vlue to allow for a new one.
+ * @param {number} [gutter=jeet.gutter] - Specifiy the gutter width as a percentage of the containers width.
+ */
 column(ratios = 1, offset = 0, cycle = 0, uncycle = 0, gutter = jeet.gutter)
   side = -get_layout_direction()
   column_widths = -get_column(ratios, gutter)
@@ -37,9 +44,16 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0, gutter = jeet.gutter)
     &:last-child
       margin-{opposite-position(side)}: (margin_last)%
 
+/**
+ * An alias for the column mixin.
+ */
 col = column
 
-// Columns without Gutters
+/**
+ * Style an element as a column without any gutters for a seamless row.
+ * @param {number} [ratios=1] - A width relative to its container as a fraction.
+ * @param {number} [offset=0] - A offset specified as a fraction (see ratios).
+ */
 span(ratio = 1, offset = 0, cycle = 0, uncycle = 0)
   side = -get_layout_direction()
   span_width = -get_span(ratio)
@@ -70,7 +84,12 @@ span(ratio = 1, offset = 0, cycle = 0, uncycle = 0)
     &:nth-child({cycle}n + 1)
       clear: both
 
-// Source Ordering
+/**
+ * Reorder columns without altering the HTML.
+ * @param {number} [ratios=0] - Specify how far along you want the element to move.
+ * @param {string} [col_or_span=column] - Specify whether the element has a gutter or not.
+ * @param {number} [gutter=jeet-gutter] - Specifiy the gutter width as a percentage of the containers width.
+ */
 shift(ratios = 0, col_or_span = column, gutter = jeet.gutter)
   side = -get_layout_direction()
   if side == right
@@ -82,16 +101,26 @@ shift(ratios = 0, col_or_span = column, gutter = jeet.gutter)
     translate = -get_span(ratios)
   position: relative
   left: (translate)%
+
+/**
+ * Reset an element that has had shift() applied to it.
+ */
 unshift()
   position: static
   left: 0
 
-// Edit Mode
+/**
+ * View the grid and its layers for easy debugging.
+ */
 edit()
   *
     background: rgba(#000, 5%)
 
-// Horizontal Centering Block Elements
+/**
+ * Horizontally center an element.
+ * @param {number} [max_width=1410px] - The max width the element can be.
+ * @param {number} [pad=0] - Specify the element's left and right padding.
+ */
 center(max_width = 1410px, pad = 0)
   cf()
   width: auto
@@ -103,7 +132,9 @@ center(max_width = 1410px, pad = 0)
   padding-left: pad
   padding-right: pad
 
-// Uncenter Elements
+/**
+ * Uncenter an element.
+ */
 uncenter()
   max-width: none
   margin-right: 0
@@ -111,7 +142,11 @@ uncenter()
   padding-left: 0
   padding-right: 0
 
-// Stacking/Unstacking Elements
+/**
+ * Stack an element so that nothing is either side of it.
+ * @param {number} [pad=0] - Specify the element's left and right padding.
+ * @param {bollean/string} [align=false] - Specify the text align for the element.
+ */
 stack(pad = 0, align = false)
   side = -get_layout_direction()
   display: unquote('block')
@@ -134,6 +169,10 @@ stack(pad = 0, align = false)
       text-align: left
     if (align == right) or (align == r)
       text-align: right
+
+/**
+ * Unstack an element.
+ */
 unstack()
   side = -get_layout_direction()
   display: inline
@@ -150,7 +189,11 @@ unstack()
   else
     text-align: left
 
-// Horizontal/Vertical/Both Alignment - Parent container needs position relative. IE9+
+/**
+ * Center an element on either or both axes.
+ * @requires A parent container with relative positioning.
+ * @param {string} [direction=both] - Specify which axes to center the element on.
+ */
 align(direction = both)
   position: absolute
   transform-style: preserve-3d
@@ -165,7 +208,9 @@ align(direction = both)
     left: 50%
     transform: translate(-50%, -50%)
 
-// Clearfix
+/**
+ * Apply a clearfix to an element.
+ */
 cf()
   *zoom: 1
   &:before, &:after
