--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -65,3 +65,23 @@
     @return false;
   }
 }
+@function w($ratios: 1, $g: $jeet-gutter) {
+  @if ($jeet-parent-first != 'true') {
+    $ratios: -reverse($ratios);
+  }
+  $w: 100;
+  @each $ratio in $ratios {
+    $w: 100 * $ratio - $g + $ratio * $g;
+  }
+  @return unquote($w + '%');
+}
+@function g($ratios: 1, $g: $jeet-gutter) {
+  @if ($jeet-parent-first != 'true') {
+    $ratios: -reverse($ratios);
+  }
+  $w: 100;
+  @each $ratio in $ratios {
+    $g: $g / $w * 100;
+  }
+  @return unquote($g + '%');
+}
