--- a/stylus/jeet/_functions.styl
+++ b/stylus/jeet/_functions.styl
@@ -28,3 +28,17 @@
   for item in list
     prepend(result, item)
   return result
+
+wide(ratios = 1, g = jeet.gutter)
+  ratios = -reverse(ratios) unless jeet.parent-first is true
+  w = 100
+  for ratio in ratios
+    w = 100 * ratio - g + ratio * g
+  return w + '%'
+
+gut(ratios = 1, g = jeet.gutter)
+  ratios = -reverse(ratios) unless jeet.parent-first is true
+  w = 100
+  for ratio in ratios
+    g = g / w * 100
+  return g + '%'
