--- a/scss/jeet/_settings.scss
+++ b/scss/jeet/_settings.scss
@@ -1,4 +1,8 @@
-// Grid Settings
+/**
+ * Grid settings.
+ * All values are defaults and can therefore be easily overidden.
+ */
+
 $jeet-gutter:           3      !default;
 $jeet-parent-first:     false  !default;
 $jeet-layout-direction: "LTR"  !default;
