--- a/stylus/jeet/_settings.styl
+++ b/stylus/jeet/_settings.styl
@@ -1,4 +1,8 @@
-// Grid Settings
+/**
+ * Grid settings.
+ * All values are defaults and can therefore be easily overidden.
+ */
+
 jeet = {
   gutter ?= 3,
   parent-first ?= false,
