--- a/stylus/jeet/_settings.styl
+++ b/stylus/jeet/_settings.styl
@@ -2,7 +2,6 @@
 jeet = {
   gutter ?= 3,
   parent-first ?= false,
-  layout-direction ?= LTR
+  layout-direction ?= LTR,
+  max-width ?= 1440px
 }
-
-g = jeet.gutter
