--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -99,23 +99,17 @@
 @function jeet-opposite-direction($direction) {
   @if $direction == "left" {
     @return right;
-  }
-  @else if $direction == "right" {
+  } @else if $direction == "right" {
     @return left;
-  }
-  @else if $direction == "top" {
+  } @else if $direction == "top" {
     @return bottom;
-  }
-  @else if $direction == "bottom" {
+  } @else if $direction == "bottom" {
     @return top;
-  }
-  @else if index("ltr" "LTR", $direction) {
+  } @else if index("ltr" "LTR", $direction) {
     @return rtl;
-  }
-  @else if index("rtl" "RTL", $direction) {
+  } @else if index("rtl" "RTL", $direction) {
     @return ltr;
-  }
-  @else {
+  } @else {
     @warn "`#{$direction}` is not a direction; please make sure your direction is all lowercase.";
     @return false;
   }
