--- a/scss/jeet/_grid.scss
+++ b/scss/jeet/_grid.scss
@@ -12,14 +12,14 @@
   $margin-last: 0;
   $margin-l: $margin-last;
   $margin-r: nth($column-widths, 2);
+
   @if $offset != 0 {
     @if $offset < 0 {
       $offset: $offset * -1;
       $offset: nth(jeet-get-column($offset, nth($column-widths, 2)), 1);
       $margin-last: $offset + nth($column-widths, 2) * 2;
       $margin-r: $margin-last;
-    }
-    @else {
+    } @else {
       $offset: nth(jeet-get-column($offset, nth($column-widths, 2)), 1);
       $margin-l: $offset + nth($column-widths, 2);
     }
@@ -60,8 +60,7 @@
     &:nth-child(#{$cycle}n + 1) {
       clear: both;
     }
-  }
-  @else {
+  } @else {
     &:last-child {
       margin-#{_opposite-direction($side)}: $margin-last * 1%;
     }
@@ -85,8 +84,7 @@
     @if $offset < 0 {
       $offset: $offset * -1;
       $margin-r: jeet-get-span($offset);
-    }
-    @else {
+    } @else {
       $margin-l: jeet-get-span($offset);
     }
   }
@@ -118,8 +116,7 @@
   @if index("column" "col" "c", $col-or-span) {
     $column-widths: jeet-get-column($ratios, $gutter);
     $translate: nth($column-widths, 1) + nth($column-widths, 2);
-  }
-  @else {
+  } @else {
     $translate: jeet-get-span($ratios);
   }
 
@@ -190,6 +187,14 @@
     right: auto;
   };
 
+  &:first-child {
+    margin-#{$side}: auto;
+  }
+
+  &:last-child {
+    margin-#{$opposite-side}: auto;
+  }
+
   @if $pad != 0 {
     padding: {
       left:  $pad;
@@ -200,21 +205,11 @@
   @if ($align is not false) {
     @if index("center" "c", $align) {
       text-align: center;
-    }
-    @else if index("left" "l", $align) {
+    } @else if index("left" "l", $align) {
       text-align: left;
-    }
-    @else if index("right" "r", $align) {
+    } @else if index("right" "r", $align) {
       text-align: right;
     }
-  }
-
-  &:first-child {
-    margin-#{$side}: auto;
-  }
-
-  &:last-child {
-    margin-#{$opposite-side}: auto;
   }
 }
 @mixin unstack() {
@@ -270,6 +265,7 @@
     content: '';
     display: table;
   }
+  
   &:after {
     clear: both;
   }
