--- a/scss/jeet/_grid.scss
+++ b/scss/jeet/_grid.scss
@@ -6,22 +6,21 @@
   $uncycle: 0,
   $gutter: $jeet-gutter
 ) {
-  $side: _get-layout-direction();
-  $opposite-side: opposite-direction($side);
-  $column-widths: _get-column($ratios, $gutter);
+  $side: jeet-get-layout-direction();
+  $opposite-side: jeet-opposite-direction($side);
+  $column-widths: jeet-get-column($ratios, $gutter);
   $margin-last: 0;
   $margin-l: $margin-last;
   $margin-r: nth($column-widths, 2);
-
   @if $offset != 0 {
     @if $offset < 0 {
       $offset: $offset * -1;
-      $offset: nth(_get-column($offset, nth($column-widths, 2)), 1);
+      $offset: nth(jeet-get-column($offset, nth($column-widths, 2)), 1);
       $margin-last: $offset + nth($column-widths, 2) * 2;
       $margin-r: $margin-last;
     }
     @else {
-      $offset: nth(_get-column($offset, nth($column-widths, 2)), 1);
+      $offset: nth(jeet-get-column($offset, nth($column-widths, 2)), 1);
       $margin-l: $offset + nth($column-widths, 2);
     }
   }
@@ -37,13 +36,13 @@
     right: 0;
   };
   margin: {
-    #{$side}:          $margin-l * 1%;
+    #{$side}: $margin-l * 1%;
     #{$opposite-side}: $margin-r * 1%;
   };
 
   @if $uncycle != 0 {
     &:nth-child(#{$uncycle}n) {
-      margin-#{$opposite-side}: $margin-r * 1%;
+      margin-#{_opposite-direction($side)}: $margin-r * 1%;
       float: $side;
     }
 
@@ -54,8 +53,8 @@
 
   @if $cycle != 0 {
     &:nth-child(#{$cycle}n) {
-      margin-#{$opposite-side}: $margin-last * 1%;
-      float: $opposite-side;
+      margin-#{_opposite-direction($side)}: $margin-last * 1%;
+      float: _opposite-direction($side);
     }
 
     &:nth-child(#{$cycle}n + 1) {
@@ -64,7 +63,7 @@
   }
   @else {
     &:last-child {
-      margin-#{$opposite-side}: $margin-last * 1%;
+      margin-#{_opposite-direction($side)}: $margin-last * 1%;
     }
   }
 }
@@ -77,19 +76,18 @@
   $ratio: 1,
   $offset: 0
 ) {
-  $side: _get-layout-direction();
-  $opposite-side: opposite-direction($side);
-  $span-width: _get-span($ratio);
+  $side: jeet-get-layout-direction();
+  $opposite-side: jeet-opposite-direction($side);
+  $span-width: jeet-get-span($ratio);
   $margin-r: 0;
   $margin-l: $margin-r;
-
   @if $offset != 0 {
     @if $offset < 0 {
       $offset: $offset * -1;
-      $margin-r: _get-span($offset);
+      $margin-r: jeet-get-span($offset);
     }
     @else {
-      $margin-l: _get-span($offset);
+      $margin-l: jeet-get-span($offset);
     }
   }
 
@@ -103,30 +101,26 @@
     right: 0;
   };
   margin: {
-    #{$side}:          $margin-l * 1%;
+    #{$side}: $margin-l * 1%;
     #{$opposite-side}: $margin-r * 1%;
   };
 }
 
 // Source Ordering
-@mixin shift(
-  $ratios: 0,
-  $col-or-span: column,
-  $gutter: $jeet-gutter
-) {
+@mixin shift($ratios: 0, $col-or-span: column, $gutter: $jeet-gutter) {
   $translate: '';
-  $side: _get-layout-direction();
+  $side: jeet-get-layout-direction();
 
   @if $side == right {
-    $ratios: -replace_nth($ratios, 0, nth($ratios, 1) * -1);
+    $ratios: jeet-replace-nth($ratios, 0, nth($ratios, 1) * -1);
   }
 
   @if index("column" "col" "c", $col-or-span) {
-    $column-widths: _get-column($ratios, $gutter);
+    $column-widths: jeet-get-column($ratios, $gutter);
     $translate: nth($column-widths, 1) + nth($column-widths, 2);
   }
   @else {
-    $translate: _get-span($ratios);
+    $translate: jeet-get-span($ratios);
   }
 
   position: relative;
@@ -151,13 +145,10 @@
 }
 
 // Horizontal Centering Block Elements
-@mixin center(
-  $max-width: 1410px,
-  $pad: 0
-) {
-  @include cf;
+@mixin center($max-width: 1410px, $pad: 0) {
+  @include cf();
   width: auto;
-  max-width: $max_width;
+  max-width: $max-width;
   float: none;
   display: block;
   margin: {
@@ -184,8 +175,8 @@
   $pad: 0,
   $align: false
 ) {
-  $side: _get-layout-direction();
-  $opposite-side: _opposite-direction($side);
+  $side: jeet-get-layout-direction();
+  $opposite-side: jeet-opposite-direction($side);
 
   display: block;
   clear: both;
@@ -224,8 +215,8 @@
   }
 }
 @mixin unstack() {
-  $side: _get-layout-direction();
-  $opposite-side: opposite-direction($side);
+  $side: jeet-get-layout-direction();
+  $opposite-side: jeet-opposite-direction($side);
 
   text-align: $side;
   display: inline;
@@ -241,7 +232,12 @@
   }
 
   &:last-child {
-    margin-#{$opposite-side}: 0;
+    margin-#{_opposite-direction($side)}: 0;
+  }
+  @if ($jeet-layout-direction == RTL) {
+    text-align: right;
+  } @else {
+    text-align: left;
   }
 }
 
@@ -249,16 +245,17 @@
 @mixin align($direction: both) {
   position: absolute;
   transform-style: preserve-3d;
-  @if ($direction == horizontal) or ($direction == h) {
-    left: 50%;
+
+  @if index("horizontal" "h", $direction) {
     transform: translateX(-50%);
-  } @else if ($direction == vertical) or ($direction == v) {
-    top: 50%;
+    left: 50%;
+  } @else if index("vertical" "v", $direction) {
     transform: translateY(-50%);
+    top: 50%;
   } @else {
+    transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
   }
 }
 
