Fixed algorithm for reversing list
When length($list) is 1, floor(length($list) / 2) evaluates to 0.
Should be 1.

Fixed by adding +1 offset.

--- a/scss/jeet/_functions.scss
+++ b/scss/jeet/_functions.scss
@@ -85,7 +85,7 @@
   }
 
   // Sass 3.3
-  @for $i from 1 through floor(length($list) / 2) {
+  @for $i from 1 through floor(length($list) / 2) + 1 {
     $tmp: nth($list, $i);
     $list: set-nth($list, $i, nth($list, -$i));
     $list: set-nth($list, -$i, $tmp);
