Revert settings back to objects

--- a/stylus/jeet/_settings.styl
+++ b/stylus/jeet/_settings.styl
@@ -4,8 +4,8 @@
  */
 
 jeet = {
-  gutter ?= 3,
-  parent-first ?= false,
-  layout-direction ?= LTR,
-  max-width ?= 1440px
+  gutter: 3,
+  parent-first: false,
+  layout-direction: LTR,
+  max-width: 1440px
 }
