--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -150,10 +150,15 @@ unshift()
 /**
  * View the grid and its layers for easy debugging.
  * @param {string} [color=black] - The background tint applied.
+ * @param {boolean} [important=false] - Whether to apply the style as !important.
  */
-edit(color = black)
-  *
-    background: rgba(color, 5%)
+edit(color = black, important = false)
+  if important
+    *
+      background: rgba(color, 5%) !important
+  else
+    *
+      background: rgba(color, 5%)
 
 /**
  *  Alias for edit().
