--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -95,8 +95,10 @@ cg = column-gutter
  * Style an element as a column without any gutters for a seamless row.
  * @param {number} [ratios=1] - A width relative to its container as a fraction.
  * @param {number} [offset=0] - A offset specified as a fraction (see ratios).
+ * @param {number} [cycle=0] - Easily create an nth column grid where cycle equals the number of columns.
+ * @param {number} [uncycle=0] - Undo a previous cycle value to allow for a new one.
  */
-span(ratio = 1, offset = 0)
+span(ratio = 1, offset = 0, cycle = 0, uncycle = 0)
   side = jeet-get-layout-direction()
   opposite-side = opposite-position(side)
   span-width = jeet-get-span(ratio)
@@ -117,6 +119,18 @@ span(ratio = 1, offset = 0)
   width: (span-width)%
   margin-{side}: (margin-l)%
   margin-{opposite-side}: (margin-r)%
+
+  if cycle != 0
+    &:nth-child({cycle}n)
+      float: opposite-side
+    &:nth-child({cycle}n + 1)
+      clear: both
+
+  if uncycle != 0
+    &:nth-child({uncycle}n)
+      float: side
+    &:nth-child({uncycle}n + 1)
+      clear: none
 
 /**
  * Reorder columns without altering the HTML.
