--- a/tests/functions/span/span.scss
+++ b/tests/functions/span/span.scss
@@ -1,5 +1,5 @@
 @import 'scss/jeet/index';
 
 .test {
-  @include span($ratio: 1/5, $offset: 1/5);
+  @include span($ratio: 1/5, $offset: 1/5, $cycle: 5, $uncycle: 5);
 }
