--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -59,13 +59,7 @@ col = column
  * @param {number} [g=jeet.gutter] - Specify the gutter width as a percentage of the containers width.
  */
 column-width(ratios = 1, g = jeet.gutter)
-  ratios = jeet-reverse(ratios) unless jeet.parent-first is true
-  w = 100
-
-  for ratio in ratios
-    w = 100 * ratio - g + ratio * g
-
-  return w + '%'
+  return jeet-get-column(ratios, g)[0] + '%'
 
 /**
  * An alias for the column-width function.
@@ -78,13 +72,7 @@ cw = column-width
  * @param {number} [g=jeet.gutter] - Specify the gutter width as a percentage of the containers width.
  */
 column-gutter(ratios = 1, g = jeet.gutter)
-  ratios = jeet-reverse(ratios) unless jeet.parent-first is true
-  w = 100
-
-  for ratio in ratios
-    g = g / w * 100
-
-  return g + '%'
+  return jeet-get-column(ratios, g)[1] + '%'
 
 /**
  * An alias for the column-gutter function.
