--- a/stylus/jeet/_grid.styl
+++ b/stylus/jeet/_grid.styl
@@ -262,6 +262,10 @@ align(direction = both)
   else if (direction == vertical) or (direction == v)
     top: 50%
     transform: translateY(-50%)
+  else if (direction == none)
+    top: auto
+    left: auto
+    transform: translate(0, 0)
   else
     top: 50%
     left: 50%
