--- a/stylus/jeet/_functions.styl
+++ b/stylus/jeet/_functions.styl
@@ -66,7 +66,7 @@ jeet-reverse(list)
 /**
  * Perform a value into a percentage value.
  * @param {number} value - The value which should be converted.
- * @returns {number} percentage
+ * @returns {number} value - The percentage.
  */
 jeet-get-percentage(value)
   if value == 0
