Git last commit message fix.

--- a/src/assets/css/_github-band.styl
+++ b/src/assets/css/_github-band.styl
@@ -8,6 +8,8 @@
   margin-top: 14px
   margin-bottom: (-(xs-padding-block - 2))
   white-space nowrap
+  text-overflow ellipsis
+  overflow hidden
   +below(small-snap)
     column(1)
     text-align center
