--- a/css/master.css
+++ b/css/master.css
@@ -2214,6 +2214,9 @@ strong {
   margin-top: 14px;
   margin-bottom: -10px;
   white-space: nowrap;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 @media only screen and (max-width: 635px) {
   .last-updated {
