Fixed features link

--- a/src/views/_features.jade
+++ b/src/views/_features.jade
@@ -1,4 +1,4 @@
-.features.text-center.grid-container(data-scroll-index='1')
+.features.text-center.grid-container
   .cf
     .contained.edit-example
       .third.flexibility.column-example
